<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 父依赖，springboot 3.5 -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <!-- project information -->
    <groupId>com.ershi</groupId>
    <artifactId>no-work</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <!-- licenses -->
    <url/>
    <licenses>
        <license/>
    </licenses>

    <!-- developer information -->
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>

    <modules>
        <module>common</module>
        <module>hot-board</module>
        <module>user</module>
        <module>chat</module>
        <module>main-app</module>
    </modules>

    <!-- dependency-version -->
    <properties>
        <!-- 基础设置 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>

        <!-- 项目模块依赖 -->
        <common.version>1.0-SNAPSHOT</common.version>
        <hot-board.version>1.0-SNAPSHOT</hot-board.version>
        <user.version>1.0-SNAPSHOT</user.version>
        <chat.version>1.0-SNAPSHOT</chat.version>

        <!--spring-boot-->
        <spring-boot-starter-validation.version>3.5.5</spring-boot-starter-validation.version>

        <!-- 第三方依赖 -->
        <sa-token.version>1.44.0</sa-token.version>
        <mybatis-flex.version>1.11.1</mybatis-flex.version>
        <netty-all.version>4.2.4.Final</netty-all.version>
        <redisson.version>3.22.0</redisson.version>
        <mysql-connector-java.vesion>8.0.33</mysql-connector-java.vesion>
        <lombok.version>1.18.30</lombok.version>
        <hutool-all.version>5.8.38</hutool-all.version>
        <fastjson2.version>2.0.58</fastjson2.version>
        <knife4j.version>4.6.0</knife4j.version>
        <commons-validaor.version>1.7</commons-validaor.version>
        <mail.version>3.5.5</mail.version>
        <spring-security-crypto.version>6.5.3</spring-security-crypto.version>
        <captcha.version>1.4.0</captcha.version>
        <rocketmq.version>2.3.1</rocketmq.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 模块依赖 -->
            <dependency>
                <groupId>com.ershi</groupId>
                <artifactId>common</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ershi</groupId>
                <artifactId>hot-board</artifactId>
                <version>${hot-board.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ershi</groupId>
                <artifactId>user</artifactId>
                <version>${user.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ershi</groupId>
                <artifactId>chat</artifactId>
                <version>${chat.version}</version>
            </dependency>

            <!--springboot-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-mail</artifactId>
                <version>${mail.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-crypto</artifactId>
                <version>${spring-security-crypto.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-validation</artifactId>
                <version>${spring-boot-starter-validation.version}</version>
            </dependency>


            <!-- datasource -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <scope>runtime</scope>
                <version>${mysql-connector-java.vesion}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <!-- ORM -->
            <dependency>
                <groupId>com.mybatis-flex</groupId>
                <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
                <version>${mybatis-flex.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mybatis-flex</groupId>
                <artifactId>mybatis-flex-processor</artifactId>
                <version>${mybatis-flex.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- MQ -->
            <dependency>
                <groupId>org.apache.rocketmq</groupId>
                <artifactId>rocketmq-spring-boot-starter</artifactId>
                <version>${rocketmq.version}</version>
            </dependency>

            <!-- websocket -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty-all.version}</version>
            </dependency>

            <!-- common-util -->
            <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <!-- Sa-Token 集成 Redis-->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-redis-template</artifactId>
                <version>${sa-token.version}</version>
            </dependency>

            <!--captcha-plus-->
            <dependency>
                <groupId>com.anji-plus</groupId>
                <artifactId>captcha-spring-boot-starter</artifactId>
                <version>${captcha.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool-all.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons-validaor.version}</version>
            </dependency>


            <!-- test -->
            <dependency>
                <groupId>com.github.xingfudeshi</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
